--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -3533,6 +3533,9 @@
     <Content Include="Areas\Inventory\Views\Server\EditorTemplates\Documents.cshtml" />
     <Content Include="Areas\Inventory\Views\Server\_InventoryFiles.cshtml" />
     <Content Include="Areas\Inventory\Views\InventorySettings\EditorTemplates\Settings\DisplayFieldSettingModel.cshtml" />
+    <Content Include="Areas\Admin\Views\ExtendedCase\CustomerForms.cshtml" />
+    <Content Include="Areas\Admin\Views\ExtendedCase\EditForm.cshtml" />
+    <Content Include="Areas\Admin\Views\ExtendedCase\_CustomerForms.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\i18n\ar.js" />
     <Content Include="Scripts\i18n\az.js" />
