--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -52,6 +52,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PostSharp, Version=4.0.38.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <HintPath>..\packages\PostSharp.4.0.38\lib\net35-client\PostSharp.dll</HintPath>
       <Private>True</Private>
@@ -200,7 +203,9 @@
     <Compile Include="Models\Case\CaseSolutionConditionOverview.cs" />
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionOverview.cs" />
+    <Compile Include="Models\Case\CaseSolutionSelections.cs" />
     <Compile Include="Models\Case\CaseTemplateData.cs" />
+    <Compile Include="Models\Case\CustomerCaseSolutions.cs" />
     <Compile Include="Models\Case\ExtendedCaseFormCaseSolutionModel.cs" />
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
     <Compile Include="Models\Case\ExtendedCaseFormSectionTranslationModel.cs" />
@@ -332,6 +337,8 @@
     <Compile Include="Models\Email\EmailSearchScope.cs" />
     <Compile Include="Models\Employee\EmployeeModel.cs" />
     <Compile Include="Models\Error\ErrorModel.cs" />
+    <Compile Include="Models\ExtendedCase\ExtendedCaseFormJsonModel.cs" />
+    <Compile Include="Models\ExtendedCase\ExtendedCaseFormPayloadModel.cs" />
     <Compile Include="Models\ExtendedCase\FormTemplate.cs" />
     <Compile Include="Models\ExtendedCase\InitExtendedForm.cs" />
     <Compile Include="Models\ExternalInvoice\ExternalInvoice.cs" />
