--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/packages.config
@@ -3,6 +3,7 @@
   <package id="Dapper" version="1.50.2" targetFramework="net472" />
   <package id="DbExtensions" version="5.1.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="PostSharp" version="4.0.38" targetFramework="net472" />
   <package id="Z.EntityFramework.Extensions" version="4.0.69" targetFramework="net472" />
   <package id="Z.EntityFramework.Plus.EF6" version="1.12.21" targetFramework="net472" />
