--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -31,6 +31,7 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net472" developmentDependency="true" />
@@ -41,8 +42,8 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.ReportViewer.2012.Runtime" version="11.0.3452.0" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net472" developmentDependency="true" />
   <package id="Modernizr" version="1.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
@@ -57,8 +58,15 @@
   <package id="RazorPDF" version="1.0.0" targetFramework="net472" />
   <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net472" />
   <package id="Select2.js" version="4.0.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="1.0.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Thinktecture.IdentityModel" version="3.6.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
