Fixed tab and section id value

--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Tools\EmailHelper.cs" />
     <Compile Include="Tools\GuidHelper.cs" />
     <Compile Include="Tools\ReflectionHelper.cs" />
+    <Compile Include="Tools\StringHelper.cs" />
     <Compile Include="Types\CustomTypes.cs" />
     <Compile Include="Types\UserIdentity.cs" />
     <Compile Include="Types\UserName.cs" />
