--- a/ExtendedCase/ExtendedCase.Logic/ExtendedCase.Logic.csproj
+++ b/ExtendedCase/ExtendedCase.Logic/ExtendedCase.Logic.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Utils\Files\TemporaryFilesCache.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
