#157408 - Retry attempt in connection Mail2Ticket Dont forget to add key in app.config: <add key="MaxConnectionAttempts" value="5" />

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -15,7 +15,7 @@
 	<add key="DefaultSmtpServer" value="" /><!--smtp.datahalland.se -->
 	<add key="ErrorMailFrom" value="" />
 	<add key="ErrorMailTo" value="" />
-    
+    <add key="MaxConnectionAttempts" value="5" />
     
     <!-- Optional diagnostic parameters      
     <add key="customersFilter" value="1" />
