--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -33,17 +33,23 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.ReportViewer.2012.Runtime" version="11.0.3452.0" targetFramework="net472" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="1.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
@@ -59,7 +65,7 @@
   <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net472" />
   <package id="Select2.js" version="4.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="1.0.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
