--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -33,6 +33,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.36.1" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.19.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.3.0" targetFramework="net472" />
@@ -40,11 +42,12 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.ReportViewer.2012.Runtime" version="11.0.3452.0" targetFramework="net472" />
