--- a/dhHelpdeskNG/DH.Helpdesk.EmailEngine.Console/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.EmailEngine.Console/App.config
@@ -10,13 +10,14 @@
   </startup>
   <connectionStrings>
     <!-- Dev -->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="Delay" value="60" />
     <add key="MaxAttempts" value="5" />
-    <add key="DefaultSmtpServer" value="smtp.datahalland.se" />
-    <add key="DefaultSmtpPort" value="25" />
+    <add key="DefaultSmtpServer" value="smtp.office365.com" />
+    <add key="DefaultSmtpPort" value="587" />
+    <add key="smtpSsl" value="true" />
   </appSettings>
   <log4net>
     <appender name="LogToErrorFile" type="log4net.Appender.RollingFileAppender">
