#159166 MS login ready for merge?

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -27,23 +27,22 @@
     <add key="log4net.Internal.Debug" value="true"/>
     <add key="SmtpServer" value="smtp.datahalland.se"/>
     <add key="SmtpPort" value="25"/>
-    #{if AuthenticationMode == "application"}<add key="LoginMode" value="Application"/>#{/if}
+    #{if AuthenticationMode == "application"}
+	<add key="LoginMode" value="Application"/>
+	  <add key="MicrosoftLogin" value="1" /><!-- 1 = Showing Microsoft login-button-->
+	  <add key="ClientId" value="" /><!-- Your application Client ID fromn Azure-->
+	  <add key="Tenant" value="" />
+	  <!--If your application supports My organization only, replace this value with the Tenant Id or Tenant name (for example, contoso.onmicrosoft.com)
+    If your application supports Accounts in any organizational directory, replace this value with "organizations"
+    If your application supports All Microsoft account users, replace this value with "common"-->
+	  <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
+	  <add key="RedirectUri" value="" /><!-- Your application RedirectUri from Azure-->
+	  #{/if}
     #{if AuthenticationMode == "windows"}<add key="LoginMode" value="Windows"/>#{/if}
     #{if AuthenticationMode == "mixed"}<add key="LoginMode" value="Mixed"/>#{/if}
     #{if AuthenticationMode == "mixed"}<add key="winAuthIPFilter" value="#{MixedModeIPRanges}"/>#{/if}
     #{if AuthenticationMode == "sso"}<add key="LoginMode" value="SSO"/>#{/if}
     #{if AuthenticationMode == "anonymous"}<add key="LoginMode" value="Anonymous"/>#{/if}
-    #{if AuthenticationMode == "applicationandmicrosoft"}
-	<add key="LoginMode" value="ApplicationAndMicrosoft"/>
-	<add key="ClientId" value="{AzureClientId}" />
-	  <!--DH Solutions Azure-->
-	<add key="Tenant" value="common" />
-	  <!--If your application supports My organization only, replace this value with the Tenant Id or Tenant name (for example, contoso.onmicrosoft.com)
-    If your application supports Accounts in any organizational directory, replace this value with "organizations"
-    If your application supports All Microsoft account users, replace this value with "common"-->
-	<add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
-	<add key="RedirectUri" value="https://localhost:63222/" />
-	#{/if}
 </appSettings>
   <system.web.extensions>
     <scripting>
@@ -67,11 +66,12 @@
     </pages>
     <!-- 50 mb in kilobytes --><!-- commit -->
     <httpRuntime maxRequestLength="52428800" targetFramework="4.7.2"/>
-    
-    #{if AuthenticationMode == "application"}
-    <authentication mode="Forms">
-      <forms loginUrl="~/Login/Login" timeout="2880" defaultUrl="~/"/>
-    </authentication>
+
+	  #{if AuthenticationMode == "application"}
+	  <authentication mode="None" />
+	  <authorization>
+		  <allow users="*" />
+	  </authorization>
     #{/if}
     #{if AuthenticationMode == "windows"}
     <authentication mode="Windows">
@@ -83,12 +83,6 @@
       <forms loginUrl="~/Login/Login" timeout="2880" defaultUrl="~/"/>
     </authentication>
 	  #{/if}
-	  #{if AuthenticationMode == "ApplicationAndMicrosoft"}
-	  <authorization>
-		  <allow users="*" />
-	  </authorization>
-	#{/if}
-
 	  <identity impersonate="false"/>
     <httpHandlers>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
@@ -197,18 +191,6 @@
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
-      <!--<dependentAssembly>
-        <assemblyIdentity name="itextsharp" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.5.0.0" newVersion="5.5.0.0" />
-      </dependentAssembly>-->
-      <!--<dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
-      </dependentAssembly>-->
 		<!--New Owin Development-->
 		<dependentAssembly>
 			<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
