--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -29,14 +29,14 @@
     <add key="SmtpPort" value="25"/>
     #{if AuthenticationMode == "application"}
 	<add key="LoginMode" value="Application"/>
-	  <add key="MicrosoftLogin" value="1" /><!-- 1 = Showing Microsoft login-button-->
-	  <add key="ClientId" value="" /><!-- Your application Client ID fromn Azure-->
-	  <add key="Tenant" value="" />
+	  <add key="MicrosoftLogin" value="1" /><!-- 1 = Show Microsoft login-button, else 0-->
+	  <add key="ClientId" value="d7a3b1b6-c4a9-461f-a0d6-505f662969df" /><!-- Your applications Client ID fromn Azure-->
+	  <add key="Tenant" value="common" />
 	  <!--If your application supports My organization only, replace this value with the Tenant Id or Tenant name (for example, contoso.onmicrosoft.com)
     If your application supports Accounts in any organizational directory, replace this value with "organizations"
     If your application supports All Microsoft account users, replace this value with "common"-->
 	  <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
-	  <add key="RedirectUri" value="" /><!-- Your application RedirectUri from Azure-->
+	  <add key="RedirectUri" value="https://dev.helpdesk.internal.datahalland.se/" /><!-- Your applications RedirectUri from Azure eg homepage-->
 	  #{/if}
     #{if AuthenticationMode == "windows"}<add key="LoginMode" value="Windows"/>#{/if}
     #{if AuthenticationMode == "mixed"}<add key="LoginMode" value="Mixed"/>#{/if}
