#159166 - Added tags to config template for Windows login

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -69,7 +69,7 @@
 
 	  #{if AuthenticationMode == "application"}
 	  <authentication mode="None">
-	      <forms loginUrl="~/Login/Login" timeout="2880" defaultUrl="~/" />
+	      <forms loginUrl="~/Login/Login" defaultUrl="~/" />
       </authentication>
 	  <authorization>
 		  <allow users="*" />
@@ -77,8 +77,11 @@
     #{/if}
     #{if AuthenticationMode == "windows"}
     <authentication mode="Windows">
-      <forms loginUrl="~/Login/Login" timeout="2880" defaultUrl="~/"/>
+      <forms loginUrl="~/Login/Login" defaultUrl="~/"/>
     </authentication>
+	<authorization>
+		<deny users="?" />
+	</authorization>
     #{/if}
     #{if AuthenticationMode == "mixed"}
     <authentication mode="Forms">
