--- a/dhHelpdeskNG/DH.Helpdesk.Upkeeper/appsettings.json
+++ b/dhHelpdeskNG/DH.Helpdesk.Upkeeper/appsettings.json
@@ -7,9 +7,10 @@
   "Customer_Id": "749",
   "CreateInventory": "true",
   "UpdateInventory": "true",
-  "UpdateUpKeeper": "false"
+  "UpdateUpKeeper": "false",
+  "UpKeeperOrgNo": "68"
 
- // //
+  // //
   //"HelpdeskDB": "Data Source=SA-SQL01.svjk.se\\SQL2012; Initial Catalog=dhHelpdesk; User Id=dhHelpdesk; Password=123456",
   //"UpKeeperUrl": "https://upkeeperapi.svjk.se",
   //"UserName": "DHHelpdesk",
