#157772 - added settings in upkeeper config template

--- a/dhHelpdeskNG/DH.Helpdesk.Upkeeper/appsettings.json.template
+++ b/dhHelpdeskNG/DH.Helpdesk.Upkeeper/appsettings.json.template
@@ -6,5 +6,6 @@
   "Customer_Id": "#{UpKeeperCustID}",
   "CreateInventory": "true",
   "UpdateInventory": "true",
-  "UpdateUpKeeper": "false"
+  "UpdateUpKeeper": "false",
+  "UpKeeperOrgNo": "#{UpKeeperOrgNo}"
 }
