Update Mail2Ticket.yml for Azure Pipelines

--- a/Mail2Ticket.yml
+++ b/Mail2Ticket.yml
@@ -26,6 +26,7 @@ steps:
     command: restore
     projects: '**/*.csproj'
     includeNuGetOrg: true
+    restoreDirectory: '$(build.artifactStagingDirectory)'
     
 # - task: NuGetCommand@2
 #   inputs:
