#Added method and model for new login containing email

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -319,6 +319,7 @@
     <Compile Include="Models\ClientLogItemModel.cs" />
     <Compile Include="Models\ExtendCaseLockInput.cs" />
     <Compile Include="Models\LoginUserInputModel.cs" />
+    <Compile Include="Models\MicrosoftUserModel.cs" />
     <Compile Include="Models\Output\CaseSectionOutputModel.cs" />
     <Compile Include="Models\Output\CaseSortFieldModel.cs" />
     <Compile Include="Models\Output\FavoriteFilterField.cs" />
