Update UpKeeper.yml for Azure Pipelines

--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -19,8 +19,7 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    command: 'restore'
-    PackagesDirectory: '$(solution)'
+    restoreDirectory:  '\DH.Helpdesk.Upkeeper'
 
 - task: VSBuild@1
   inputs:
