Update UpKeeper.yml for Azure Pipelines

--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -20,6 +20,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
+    packagesDirectory: '**/DH.Helpdesk.Upkeeper'
     #restoreSolution: '**\DH.Helpdesk.Upkeeper/packages.config'
 
 - task: VSBuild@1
